--- a/BiteMeClient/src/ClientGUI/ClientLogin.fxml
+++ b/BiteMeClient/src/ClientGUI/ClientLogin.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="700.0" stylesheets="@client.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ClientLoginController">
+<AnchorPane prefHeight="600.0" prefWidth="800" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ClientLoginController">
    <children>
-      <VBox alignment="CENTER" spacing="20" AnchorPane.topAnchor="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <VBox alignment="CENTER" spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
          <Text fx:id="headlineText" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome">
             <font>
                <Font size="40.0" />
@@ -21,25 +27,25 @@
          
          <VBox alignment="CENTER" spacing="10">
             <HBox alignment="CENTER" spacing="10">
-               <Label text="Username:" styleClass="login-label" />
+               <Label styleClass="login-label" text="Username:" />
                <TextField fx:id="usernameField" prefWidth="200" />
             </HBox>
             
             <HBox alignment="CENTER" spacing="10">
-               <Label text="Password:" styleClass="login-label" />
+               <Label styleClass="login-label" text="Password:" />
                <PasswordField fx:id="passwordField" prefWidth="200" />
             </HBox>
          </VBox>
          
-         <Text fx:id="errorText" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Error text" visible="false">
+         <Text fx:id="errorText" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Error text" textAlignment="CENTER" visible="false" wrappingWidth="723.0937294960022">
             <font>
                <Font size="16.0" />
             </font>
          </Text>
          
          <HBox alignment="CENTER" spacing="50">
-            <Button fx:id="loginButton" mnemonicParsing="false" text="Login" prefHeight="50.0" prefWidth="130.0" />
-            <Button fx:id="quitButton" mnemonicParsing="false" text="Quit" prefHeight="50.0" prefWidth="130.0" styleClass="logout-button" />
+            <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" text="Login" />
+            <Button fx:id="quitButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" styleClass="logout-button" text="Quit" />
          </HBox>
       </VBox>
    </children>
