--- a/BiteMeClient/src/ClientGUI/CustomerOrderCreation.fxml
+++ b/BiteMeClient/src/ClientGUI/CustomerOrderCreation.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,7 +12,7 @@
 <AnchorPane prefHeight="600.0" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerOrderCreation">
 <Button fx:id="backButton" layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
     <Label layoutX="20.0" layoutY="50.0" style="-fx-font-weight: bold;" text="Please Choose a branch" />
-    <ComboBox fx:id="branchComboBox" layoutX="20.0" layoutY="70.0"  prefWidth="200.0" onAction = "#handleBranchSelection" />
+    <ComboBox fx:id="branchComboBox" layoutX="20.0" layoutY="70.0" onAction="#handleBranchSelection" prefWidth="200.0" />
 
     <Label layoutX="20.0" layoutY="110.0" style="-fx-font-weight: bold;" text="Please Choose a Category from the menu" />
     <ComboBox fx:id="categoryComboBox" layoutX="20.0" layoutY="130.0" onAction="#handleCategorySelection" prefWidth="200.0" />
@@ -38,7 +37,7 @@
 	        <TableColumn fx:id="ChosenItemscommentsColumn" prefWidth="310.0" text="Comments" />
 	    </columns>
 	</TableView>
-    <Label layoutX="20.0" layoutY="585.0" style="-fx-font-weight: normal;" text="(To remove an item, click on it)" />
+    <Label layoutX="20.0" layoutY="581.0" style="-fx-font-weight: normal;" text="(To remove an item, click on it)" />
     <Button fx:id="continueButton" layoutX="608.0" layoutY="7.0" onAction="#handleContinueAction" prefHeight="67.0" prefWidth="185.0" text="CONTINUE" />
     <Button layoutX="325.0" layoutY="390.0" onAction="#handleConfirmSelectionAction" prefHeight="30.0" prefWidth="150.0" text="SAVE SELECTIONS" />
    <Text fx:id="errorText" fill="RED" layoutX="475.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ERROR MESSAGES HERE" textAlignment="RIGHT" visible="false" wrappingWidth="319.4700012207031">
