--- a/BiteMeClient/src/ClientGUI/HomeBranchChange.fxml
+++ b/BiteMeClient/src/ClientGUI/HomeBranchChange.fxml
@@ -6,30 +6,30 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="320" prefWidth="380" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.HomeBranchChange">
+<AnchorPane prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.HomeBranchChange">
    <children>
       <Button fx:id="backButton" layoutX="23.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Text fx:id="titleText" layoutX="34.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Branch Change">
+      <Text fx:id="titleText" layoutX="247.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Branch Change">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
       </Text>
-      <Text fx:id="errorText" fill="RED" layoutX="30.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Changing Home Branch failed!" textAlignment="CENTER" visible="false" wrappingWidth="317.4375">
+      <Text fx:id="errorText" fill="RED" layoutX="62.0" layoutY="316.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Changing Home Branch failed!" textAlignment="CENTER" visible="false" wrappingWidth="648.7239685058594">
          <font>
             <Font size="16.0" />
          </font>
       </Text>
-      <Text layoutX="28.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please choose the new desired home branch:">
+      <Text layoutX="241.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please choose the new desired home branch:">
          <font>
             <Font size="16.0" />
          </font>
       </Text>
-      <ComboBox fx:id="homeBranchComboBox" layoutX="101.0" layoutY="179.0" onAction="#handleComboBoxAction" prefHeight="36.0" prefWidth="175.0" />
-      <Text fx:id="successText" fill="#05aa44" layoutX="19.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Branch Changed successfully!" textAlignment="CENTER" visible="false" wrappingWidth="342.0572814941406">
+      <ComboBox fx:id="homeBranchComboBox" layoutX="314.0" layoutY="228.0" onAction="#handleComboBoxAction" prefHeight="36.0" prefWidth="175.0" />
+      <Text fx:id="successText" fill="#05aa44" layoutX="62.0" layoutY="316.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Branch Changed successfully!" textAlignment="CENTER" visible="false" wrappingWidth="648.7239685058594">
          <font>
             <Font size="16.0" />
          </font>
