--- a/BiteMeClient/src/ClientGUI/ClientLogin.fxml
+++ b/BiteMeClient/src/ClientGUI/ClientLogin.fxml
@@ -7,46 +7,37 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ClientLoginController">
+<AnchorPane prefHeight="600.0" prefWidth="800" styleClass="blue-gradient-1" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ClientLoginController">
    <children>
-      <VBox alignment="CENTER" spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
-         <Text fx:id="headlineText" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome">
-            <font>
-               <Font size="40.0" />
-            </font>
-         </Text>
+      <VBox spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <HBox alignment="CENTER" styleClass="header">
+            <Text fx:id="headlineText" text="Welcome" />
+         </HBox>
          
-         <Text fx:id="subtitleText" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter Username &amp; Password">
-            <font>
-               <Font size="18.0" />
-            </font>
-         </Text>
+         <Text fx:id="welcomeText" text="Please enter Username &amp; Password" textAlignment="CENTER" wrappingWidth="799.1875" />
          
-         <VBox alignment="CENTER" spacing="10">
-            <HBox alignment="CENTER" spacing="10">
-               <Label styleClass="login-label" text="Username:" />
-               <TextField fx:id="usernameField" prefWidth="200" />
-            </HBox>
+         <VBox alignment="CENTER" spacing="20">
+            <VBox alignment="CENTER" spacing="10">
+               <HBox alignment="CENTER" spacing="10">
+                  <Label styleClass="login-label" text="Username:" />
+                  <TextField fx:id="usernameField" prefWidth="200" />
+               </HBox>
+               
+               <HBox alignment="CENTER" spacing="10">
+                  <Label styleClass="login-label" text="Password:" />
+                  <PasswordField fx:id="passwordField" prefWidth="200" />
+               </HBox>
+            </VBox>
             
-            <HBox alignment="CENTER" spacing="10">
-               <Label styleClass="login-label" text="Password:" />
-               <PasswordField fx:id="passwordField" prefWidth="200" />
+            <Text fx:id="errorText" fill="RED" text="Error text" textAlignment="CENTER" visible="false" wrappingWidth="723.0937294960022" />
+            
+            <HBox alignment="CENTER" spacing="50">
+               <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" text="Login" />
+               <Button fx:id="quitButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" text="Quit" />
             </HBox>
          </VBox>
-         
-         <Text fx:id="errorText" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Error text" textAlignment="CENTER" visible="false" wrappingWidth="723.0937294960022">
-            <font>
-               <Font size="16.0" />
-            </font>
-         </Text>
-         
-         <HBox alignment="CENTER" spacing="50">
-            <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" text="Login" />
-            <Button fx:id="quitButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" styleClass="logout-button" text="Quit" />
-         </HBox>
       </VBox>
    </children>
 </AnchorPane>
